[tool.poetry]
name = "Streamlit ChatpGPT"
version = "0.1.0"
description = ""
authors = ["joseph.szurley"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
openai = "^0.26.5"
python-dotenv = "^0.21.1"
streamlit = "1.18"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
